# slog

./: CMakeLists.txt  Dockerfile  README.md
src/: main.cpp  slog.cpp  slog.h  timedate.cpp  timedate.h
test/: test_slog.cpp
